2010-11-26  Murray Cumming  <murrayc@murrayc.com>

	Check some libxml function return values.

	* libxml++/document.cc: do_write_to_stream():
	* libxml++/schema.cc: set_document(): Check the results from 
	xmlSchemaNewDocParserCtxt() and xmlSaveFormatFileTo().
	Bug #635846 (Markus Elfring).

2.33.1:

2010-11-14  Murray Cumming  <murrayc@murrayc.com>

	free_wrappers(): Fix crash.

	* libxml++/nodes/node.cc: free_wrappers(): Revert my change to check 
	xmlNode::properties for all types, because the layout of some structs 
	is apparently completely different (not really deriving fully), and this 
	caused a crash in examples/sax_parser/.
	Added an explanatory comment.

2010-11-14  Murray Cumming  <murrayc@murrayc.com>

	Change the --enable-examples default to yes.

	* configure.ac: Build the examples by default, so we at least check the 
	build more often. Disabling them is only useful for package building, 
	which is the less common case.

2010-11-14  Murray Cumming  <murrayc@murrayc.com>

	Moved create_wrapper() and free_wrappers() to Node.

	* libxml++/document.[h|cc]:
	* libxml++/nodes/node.[h|cc]: Moved create_wrapper() and free_wrappers() 
	to here from Document.
	free_wrappers(): Never return inside the switch/case, so we check 
	xmlNode::properties for all struct types, and to avoid making the behaviour 
	non-obvious.
	* libxml++/parsers/textreader.cc:
	* libxml++/validators/dtdvalidator.cc:
	* libxml++/nodes/element.cc: Adapted.
	
2010-11-08  Alessandro Pignotti  <a.pignotti@sssup.it>

	Make libxml++ compatible with separate and multi-threaded libxml2 usage.

	* libxml++/document.[h|cc]: Added create_wrapper() and free_wrappers(),
	replacing on_libxml_construct() and on_libxml_destruct() .
	Init(): Do not register these global callbacks with libxml.
	* libxml++/nodes/element.cc:
	* libxml++/nodes/node.[h|cc]:
	* libxml++/parsers/textreader.cc:
	* libxml++/validators/dtdvalidator.cc: Call these create_wrapper() before 